# educational_project

./: Taskfile.yaml  postman_collection.json  pyproject.toml
catalog_service/catalog_service/: __init__.py  service.py
database_service/: .gitignore
database_service/database_service/: __init__.py  service.py
database_service/database_service/controller/: __init__.py  db_controller.py
database_service/database_service/core/: __init__.py  db_core.py
database_service/migrations/: env.py
database_service/migrations/versions/: 0c8db1bb84fb_.py  324e2c57e20a_.py  3abe4679e45f_add_unique_constraint_to_books.py  5b3b0dea88f3_.py  63f9da1020ec_create_authors_books_tables.py  d2c3cd3b7d9f_.py  efcab83f5c60_.py  f16e9731d489_.py  f85b7b957784_.py
database_service/models/: __init__.py  author_book_models.py  maSchemas.py
database_service/utils/: LoggerFormater.py
