[tool.poetry]
name = "microservice-arch-educational-project"
version = "0.1.0"
description = ""
authors = ["Egor251 <egorpyshny@gmail.com>"]
readme = "README.md"
packages = [{include = "microservice_arch_educational_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
alembic = "^1.13.1"
httpx = "^0.26.0"
sqlalchemy = "^2.0.23"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.refactoring.dependencies]
mypy = "^1.7.1"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
