[tool.poetry]
name = "microservice-arch-educational-project"
version = "0.1.0"
description = ""
authors = ["Egor251 <egorpyshny@gmail.com>"]
readme = "README.md"
packages = [{include = "microservice_arch_educational_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^3.0.2"}
alembic = "^1.13.1"
httpx = "^0.26.0"
sqlalchemy = "^2.0.23"
psycopg = {extras = ["binary"], version = "^3.1.17"}
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
alembic-utils = "^0.8.2"
asyncio = "^3.4.3"
psycopg-pool = "^3.2.1"
pika = "^1.3.2"
asyncpg = "^0.29.0"
marshmallow-sqlalchemy = "^1.0.0"
aio-pika = "^9.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.black]
line-length = 79
experimental-string-processing = true
target-version = ["py310"]
include = '^.+\.pyi?$'


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"












[tool.poetry.group.refactoring.dependencies]
mypy = "^1.7.1"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
